flex-wrap fixed fro some screen sizes

--- a/src/Components/Movie Image Card/style.css
+++ b/src/Components/Movie Image Card/style.css
@@ -2,7 +2,7 @@
     display: flex;
     padding-top: 50px;
     padding-bottom: 50px;
-    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .card-container article{
@@ -14,4 +14,10 @@
 
 article{
     background-color: rgba(121, 110, 110, 0.5);
+}
+
+@media screen and (max-width: 1358px){
+    .card-container{
+        flex-wrap: wrap;
+    }
 }
